Make traefik host a parameter to make it easier to override
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/collections/ansible_collections/jaredhocutt/homelab/roles/archiveium/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/archiveium/defaults/main.yml
@@ -21,6 +21,8 @@ archiveium_redis_volume_data: "{{ archiveium_name }}-redis-data"
 archiveium_meilisearch_volume_data: "{{ archiveium_name }}-meilisearch-data"
 
 archiveium_traefik_enable: true
+archiveium_traefik_host: "{{ archiveium_name }}.{{ common_traefik_domain }}"
+archiveium_meilisearch_traefik_host: "{{ archiveium_name }}-meilisearch.{{ common_traefik_domain }}"
 archiveium_ports:
   - 5292:3000
 archiveium_meilisearch_ports:
