--- a/collections/ansible_collections/jaredhocutt/homelab/roles/audiobookshelf/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/audiobookshelf/vars/main.yml
@@ -13,7 +13,7 @@ audiobookshelf_env_vars_base: "{{ common_env_vars_base }}"
 
 audiobookshelf_container_labels_traefik:
   traefik.enable: true
-  traefik.http.routers.{{ audiobookshelf_name }}.rule: Host(`{{ audiobookshelf_name }}.{{ common_traefik_domain }}`)
+  traefik.http.routers.{{ audiobookshelf_name }}.rule: Host(`{{ audiobookshelf_traefik_host }}`)
   traefik.http.routers.{{ audiobookshelf_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
 audiobookshelf_container_labels_base: "{{ audiobookshelf_traefik_enable | ternary(audiobookshelf_container_labels_traefik, {}) }}"
 
