--- a/collections/ansible_collections/jaredhocutt/homelab/roles/immich/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/immich/defaults/main.yml
@@ -18,6 +18,7 @@ immich_postgres_volume_data: "{{ immich_name }}-postgres-data"
 immich_redis_volume_data: "{{ immich_name }}-redis-data"
 
 immich_traefik_enable: true
+immich_traefik_host: "{{ immich_name }}.{{ common_traefik_domain }}"
 immich_ports:
   - 2283:2283
 
