--- a/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/vars/main.yml
@@ -13,7 +13,7 @@ sonarr_env_vars_base: "{{ common_env_vars_base }}"
 
 sonarr_container_labels_traefik:
   traefik.enable: true
-  traefik.http.routers.{{ sonarr_name }}.rule: Host(`{{ sonarr_name }}.{{ common_traefik_domain }}`)
+  traefik.http.routers.{{ sonarr_name }}.rule: Host(`{{ sonarr_traefik_host }}`)
   traefik.http.routers.{{ sonarr_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
 sonarr_container_labels_base: "{{ sonarr_traefik_enable | ternary(sonarr_container_labels_traefik, {}) }}"
 
