--- a/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/vars/main.yml
@@ -13,7 +13,7 @@ tautulli_env_vars_base: "{{ common_env_vars_base }}"
 
 tautulli_container_labels_traefik:
   traefik.enable: true
-  traefik.http.routers.{{ tautulli_name }}.rule: Host(`{{ tautulli_name }}.{{ common_traefik_domain }}`)
+  traefik.http.routers.{{ tautulli_name }}.rule: Host(`{{ tautulli_traefik_host }}`)
   traefik.http.routers.{{ tautulli_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
 tautulli_container_labels_base: "{{ tautulli_traefik_enable | ternary(tautulli_container_labels_traefik, {}) }}"
 
