--- a/collections/ansible_collections/jaredhocutt/homelab/roles/audiobookshelf/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/audiobookshelf/defaults/main.yml
@@ -11,6 +11,7 @@ audiobookshelf_volume_metadata: "{{ audiobookshelf_name }}-metadata"
 audiobookshelf_volume_media: "{{ audiobookshelf_name }}-media"
 
 audiobookshelf_traefik_enable: true
+audiobookshelf_traefik_host: "{{ audiobookshelf_name }}.{{ common_traefik_domain }}"
 audiobookshelf_ports:
   - 13378:80
 
