--- a/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/defaults/main.yml
@@ -17,6 +17,9 @@ bar_assistant_redis_volume_data: "{{ authentik_name }}-redis-data"
 bar_assistant_meilisearch_volume_data: "{{ bar_assistant_name }}-meilisearch-data"
 
 bar_assistant_traefik_enable: true
+bar_assistant_traefik_host: "{{ bar_assistant_name }}.{{ common_traefik_domain }}"
+bar_assistant_salt_rim_traefik_host: "{{ bar_assistant_name }}-salt-rim.{{ common_traefik_domain }}"
+bar_assistant_meilisearch_traefik_host: "{{ bar_assistant_name }}-meilisearch.{{ common_traefik_domain }}"
 bar_assistant_ports:
   - 8082:8080
 bar_assistant_salt_rim_ports:
