--- a/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/defaults/main.yml
@@ -10,6 +10,7 @@ calibre_volume_config: "{{ calibre_name }}-config"
 calibre_volume_media: "{{ calibre_name }}-media"
 
 calibre_traefik_enable: true
+calibre_traefik_host: "{{ calibre_name }}.{{ common_traefik_domain }}"
 calibre_ports:
   - 8080:8080
   - 8081:8081
