--- a/collections/ansible_collections/jaredhocutt/homelab/roles/changedetection/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/changedetection/defaults/main.yml
@@ -11,6 +11,7 @@ changedetection_browser_image_tag: latest
 changedetection_volume_data: "{{ changedetection_name }}-data"
 
 changedetection_traefik_enable: true
+changedetection_traefik_host: "{{ changedetection_name }}.{{ common_traefik_domain }}"
 changedetection_ports:
   - 5000:5000
 
