--- a/collections/ansible_collections/jaredhocutt/homelab/roles/healthchecks/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/healthchecks/defaults/main.yml
@@ -9,6 +9,7 @@ healthchecks_image_tag: latest
 healthchecks_volume_config: "{{ healthchecks_name }}-config"
 
 healthchecks_traefik_enable: true
+healthchecks_traefik_host: "{{ healthchecks_name }}.{{ common_traefik_domain }}"
 healthchecks_ports:
   - 8000:8000
 
