--- a/collections/ansible_collections/jaredhocutt/homelab/roles/stirling_pdf/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/stirling_pdf/defaults/main.yml
@@ -13,6 +13,7 @@ stirling_pdf_volume_logs: "{{ stirling_pdf_name }}-logs"
 stirling_pdf_volume_pipeline: "{{ stirling_pdf_name }}-pipeline"
 
 stirling_pdf_traefik_enable: true
+stirling_pdf_traefik_host: "{{ stirling_pdf_name }}.{{ common_traefik_domain }}"
 stirling_pdf_ports:
   - 8080:8080
 
