--- a/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/defaults/main.yml
@@ -9,6 +9,7 @@ uptime_kuma_image_tag: latest
 uptime_kuma_volume_data: "{{ uptime_kuma_name }}-data"
 
 uptime_kuma_traefik_enable: true
+uptime_kuma_traefik_host: "{{ uptime_kuma_name }}.{{ common_traefik_domain }}"
 uptime_kuma_ports:
   - 3001:3001
 
