--- a/collections/ansible_collections/jaredhocutt/homelab/roles/vault/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/vault/vars/main.yml
@@ -16,7 +16,7 @@ vault_env_vars_base: "{{ common_env_vars_base }}"
 
 vault_container_labels_traefik:
   traefik.enable: true
-  traefik.http.routers.{{ vault_name }}.rule: Host(`{{ vault_name }}.{{ common_traefik_domain }}`)
+  traefik.http.routers.{{ vault_name }}.rule: Host(`{{ vault_traefik_host }}`)
   traefik.http.routers.{{ vault_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
 vault_container_labels_base: "{{ vault_traefik_enable | ternary(vault_container_labels_traefik, {}) }}"
 
