Add custom quadlet options for Paperless AI service dependency
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/collections/ansible_collections/jaredhocutt/homelab/roles/paperless/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/paperless/vars/main.yml
@@ -95,4 +95,9 @@ paperless_gotenberg_quadlet_options_base: "{{ common_quadlet_options_base }}"
 
 paperless_tika_quadlet_options_base: "{{ common_quadlet_options_base }}"
 
-paperless_ai_quadlet_options_base: "{{ common_quadlet_options_base }}"
+paperless_ai_quadlet_options_base_custom:
+  - |
+    [Unit]
+    Requires={{ paperless_name }}.service
+    After={{ paperless_name }}.service
+paperless_ai_quadlet_options_base: "{{ common_quadlet_options_base + paperless_ai_quadlet_options_base_custom }}"
