Update Warracker image variable to remove 'docker pull' prefix
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/defaults/main.yml
@@ -3,7 +3,7 @@
 
 warracker_name: warracker
 
-warracker_image: docker pull ghcr.io/sassanix/warracker/main
+warracker_image: ghcr.io/sassanix/warracker/main
 warracker_image_tag: latest
 warracker_postgres_image: docker.io/library/postgres
 warracker_postgres_image_tag: "15"
